--- a/myLemon.html
+++ b/myLemon.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="myLemon.css">
+</head>
 <body>
+<p>How many cups do you want to buy?.</p>
+
+<div class="dropdown">
+  <button onclick="buyMoreCups()" class="dropbtn">Buy Cups</button>
+  <div id="buyCupsList" class="dropdown-content">
+    <a href="myLemon.js">10</a>
+    <a href="myLemon.js">20</a>
+    <a href="myLemon.js">30</a>
+  </div>
+</div>
+
+ 
 <script src="myLemon.js"></script>
 </body>
 </html>
